[gd_scene load_steps=28 format=3 uid="uid://drka44qeqnqf7"]

[ext_resource type="Script" path="res://boss_bird.gd" id="1_dac8b"]
[ext_resource type="Texture2D" uid="uid://bsvig0s485yg6" path="res://assets/characters/bosses/BossHawk_Spritesheet.png" id="2_5ao4m"]
[ext_resource type="Script" path="res://scenes/attack_range_drawer.gd" id="2_mnmo1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iidaj"]
atlas = ExtResource("2_5ao4m")
region = Rect2(0, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs56h"]
atlas = ExtResource("2_5ao4m")
region = Rect2(44, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mbjo"]
atlas = ExtResource("2_5ao4m")
region = Rect2(88, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6a5m"]
atlas = ExtResource("2_5ao4m")
region = Rect2(132, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg0i3"]
atlas = ExtResource("2_5ao4m")
region = Rect2(176, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7i21"]
atlas = ExtResource("2_5ao4m")
region = Rect2(220, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_02pqb"]
atlas = ExtResource("2_5ao4m")
region = Rect2(264, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqvdj"]
atlas = ExtResource("2_5ao4m")
region = Rect2(308, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k6cu"]
atlas = ExtResource("2_5ao4m")
region = Rect2(352, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wd5l"]
atlas = ExtResource("2_5ao4m")
region = Rect2(396, 45, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5hl0"]
atlas = ExtResource("2_5ao4m")
region = Rect2(0, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcrex"]
atlas = ExtResource("2_5ao4m")
region = Rect2(44, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1i48"]
atlas = ExtResource("2_5ao4m")
region = Rect2(88, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8vua"]
atlas = ExtResource("2_5ao4m")
region = Rect2(132, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_obyde"]
atlas = ExtResource("2_5ao4m")
region = Rect2(176, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbpe8"]
atlas = ExtResource("2_5ao4m")
region = Rect2(0, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k78c"]
atlas = ExtResource("2_5ao4m")
region = Rect2(44, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_c40m0"]
atlas = ExtResource("2_5ao4m")
region = Rect2(88, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aje2"]
atlas = ExtResource("2_5ao4m")
region = Rect2(132, 0, 44, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_duw0j"]
atlas = ExtResource("2_5ao4m")
region = Rect2(176, 0, 44, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_an0lc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iidaj")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_vs56h")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_6mbjo")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_a6a5m")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_yg0i3")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_o7i21")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_02pqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqvdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k6cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wd5l")
}],
"loop": true,
"name": &"attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5hl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcrex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1i48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8vua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obyde")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbpe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k78c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c40m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aje2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duw0j")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6xdao"]
radius = 234.625

[sub_resource type="CircleShape2D" id="CircleShape2D_gw8ru"]
radius = 41.1947

[sub_resource type="CircleShape2D" id="CircleShape2D_0odrx"]
radius = 81.7435

[node name="boss_bird" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_dac8b")

[node name="AttackRangeDrawer" type="Node2D" parent="."]
script = ExtResource("2_mnmo1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1.90735e-06)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_an0lc")
animation = &"attack"
frame_progress = 0.476388
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_6xdao")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 8)
shape = SubResource("CircleShape2D_gw8ru")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(2, -10)
shape = SubResource("CircleShape2D_0odrx")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="attack_indicator_timer" type="Timer" parent="."]

[node name="chase_reset_timer" type="Timer" parent="."]

[node name="attack_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.566093, 0, 0, 1)
offset_left = -41.0
offset_top = 44.0
offset_right = 131.0
offset_bottom = 71.0
scale = Vector2(0.5, 0.5)
max_value = 150.0
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="attack_indicator_timer" to="." method="_on_attack_indicator_timer_timeout"]
[connection signal="timeout" from="chase_reset_timer" to="." method="_on_chase_reset_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
